[package]
name = "letmein"
version = "0.1.0"
edition = "2021"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3.3.2"
env_logger = "0.9.0"
thiserror = "1.0.30"

[dev-dependencies]
actix-rt = "2.5.0"
anyhow = "1.0.51"
reqwest = "0.11.7"
