[package]
name = "letmein"
version = "0.1.0"
edition = "2021"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.0-beta.14"
actix-http = "3.0.0-beta.10"
thiserror = "1.0.30"
tracing = { version = "0.1.29", features = ["log"] }
tracing-actix-web = "0.5.0-beta.5"
tracing-bunyan-formatter = "0.3.1"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", features = ["registry", "env-filter"] }

[dev-dependencies]
actix-rt = "2.5.0"
anyhow = "1.0.51"
reqwest = "0.11.7"
tokio = "1.15.0"
